--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-javascript-starter</title>
+    <title>CrowdFunding</title>
   </head>
   <body>
-    <div id="root">
-      <h1>Hello Vite!</h1>
-    </div>
-    <!-- <script type="module" src="/src/main.jsx"></script> -->
+    <!-- React mounts here -->
+    <div id="root"></div>
+
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
+
